<resources>
    <string name="app_name">calculatrice</string>
    <string name="clear">C</string>
    <string name="clear_one">&#x2190;</string>
    <string name="one_on_x">1/x</string>
    <string name="square">x&#xb2;</string>
    <string name="square_root">&#x221A;</string>
    <string name="divide">&#xf7;</string>
    <string name="opening_bracket">&#x28;</string>
    <string name="closing_bracket">&#x29;</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">&#xd7;</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="substract">&#x2212;</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">&#x2b;</string>
    <string name="sign">+/&#x2212;</string>
    <string name="zero">0</string>
    <string name="comma">,</string>
    <string name="equal">&#x3d;</string>
    <string name="error_message">Can\'t divide by zero</string>
</resources>